Changed the hero section image

--- a/src/index.html
+++ b/src/index.html
@@ -29,22 +29,24 @@
         </section>
     </nav>
     <main class="container">
-        <h1>The whole accommodation just for you</h1>
-        <section class="input-container">
-            <div class="input-bar">
-                <img src="./images/loacation.svg" alt="">
-                <input type="text" disabled>
-            </div>
-            <div class="input-bar">
-                <img src="./images/date.svg" alt="">
-                <input type="text" disabled>
-            </div>
-            <div class="input-bar">
-                <img src="./images/guest.svg" alt="">
-                <input type="text" disabled placeholder="Guests">
-            </div>
-            <button class="seek-btn">Seek</button>
-        </section>
+        <div class="sub-container">
+            <h1 class="title">The whole accommodation just for you</h1>
+            <section class="input-container">
+                <div class="input-bar">
+                    <img src="./images/loacation.svg" alt="">
+                    <input type="text" disabled placeholder="Where should we go?">
+                </div>
+                <div class="input-bar">
+                    <img src="./images/date.svg" alt="">
+                    <input type="text" disabled placeholder="July 26 - August 9">
+                </div>
+                <div class="input-bar">
+                    <img src="./images/guest.svg" alt="">
+                    <input type="text" disabled placeholder="Guests">
+                </div>
+                <button class="seek-btn">Seek</button>
+            </section>
+        </div>
     </main>
 
     <footer>
