Added image cards

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/firstCards.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="">
@@ -48,9 +50,27 @@
             </section>
         </div>
     </main>
+    <main class="main-container">
+        <section class="first">
+            <div class="first-card">
+                <article class="first-card-content">
+                    <div class="icon-container">
+                        <img class="icon-img" src="./images/b66ba307-6017-490b-a3ad-1d42c5970914.svg" alt="">
+                    </div>
+                    <p>Sign in to send a message to the host and get more details about a listing.</p>
+                </article>
+                <button class="register-btn">Register</button>
+            </div>
+            <section class="second-card-container"></section>
+            <h1 style="padding: 1rem 0rem;">Find accomodations to suit your taste</h1>
+            <section class="images-container"></section>
+        </section>
+    </main>
 
     <footer>
 
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
