--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/weekendTrips.css">
     <link rel="stylesheet" href="./styles/firstCards.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>fewo-direkt</title>
 </head>
@@ -65,12 +66,66 @@
             <h1 style="padding: 1rem 0rem;">Find accomodations to suit your taste</h1>
             <section class="images-container"></section>
         </section>
+        <div class="weekend-trips-cards">
+            <aside class="weekend-trips-title">
+                <h1>Browse weekend trips</h1>
+                <p>Offers for the period: <span><strong>July 26 - August 9</strong></span></p>
+            </aside>
+            <main class="cards-main-container">
+                <section class="trips-card">
+                    <div class="card-image">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                    <aside class="card-details">
+                        <div class="card-price">
+                            <h5>10</h5>
+                            <p>Unusual (113 reviews)</p>
+                        </div>
+                        <h3>in a beautiful country house, luxury renovation, directly by the forest + near the golf course</h3>
+                        <p>Schmallenberg, North Rhine-Westphalia</p>
+                        <h3>336 €</h3>
+                        <small>168 € per night <br>incl. taxes & fees</small>
+                    </aside>
+                </section>
+                <section class="trips-card">
+                    <div class="card-image">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                    <aside class="card-details">
+                        <div class="card-price">
+                            <h5>10</h5>
+                            <p>Unusual (113 reviews)</p>
+                        </div>
+                        <h3>in a beautiful country house, luxury renovation, directly by the forest + near the golf course</h3>
+                        <p>Schmallenberg, North Rhine-Westphalia</p>
+                        <h3>336 €</h3>
+                        <small>168 € per night <br>incl. taxes & fees</small>
+                    </aside>
+                </section>
+                <section class="trips-card">
+                    <div class="card-image">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                    <aside class="card-details">
+                        <div class="card-price">
+                            <h5>10</h5>
+                            <p>Unusual (113 reviews)</p>
+                        </div>
+                        <h3>in a beautiful country house, luxury renovation, directly by the forest + near the golf course</h3>
+                        <p>Schmallenberg, North Rhine-Westphalia</p>
+                        <h3>336 €</h3>
+                        <small>168 € per night <br>incl. taxes & fees</small>
+                    </aside>
+                </section>
+            </main>
+        </div>
     </main>
-
     <footer>
 
     </footer>
-
     <script src="main.js"></script>
 </body>
 </html>
